src/objects/CaseProduct__c.object
<CustomObject>
    <description>This custom objects holds the product line items on case. It holds the case products and the additional services information along with the prices and NTT results.</description>
    <fields>
        <fullName>Account_Number__c</fullName>
        <label>COD Account Number</label>
        <length>72</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Type__c</fullName>
        <label>Account Type</label>
        <picklist>
            <picklistValues>
                <fullName>BANKACCOUNT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UNDEF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BANKGIRO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PLUSGIRO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IBAN</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Additional_Service1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Additional Services – ex registered</inlineHelpText>
        <label>Additional Service 1</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <filterItems>
                <field>$User.Sales_Area1__c</field>
                <operation>equals</operation>
                <valueField>Additional_Service__c.Sales_Area__c</valueField>
            </filterItems>
            <filterItems>
                <field>$User.Sales_Area_2__c</field>
                <operation>equals</operation>
                <valueField>Additional_Service__c.Sales_Area__c</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Additional_Service__c</referenceTo>
        <relationshipLabel>CaseProducts (Additional Service1)</relationshipLabel>
        <relationshipName>Item_Product_Search_Results</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Additional_Service2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Additional Services – ex registered</inlineHelpText>
        <label>Additional Service 2</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <filterItems>
                <field>$User.Sales_Area1__c</field>
                <operation>equals</operation>
                <valueField>Additional_Service__c.Sales_Area__c</valueField>
            </filterItems>
            <filterItems>
                <field>$User.Sales_Area_2__c</field>
                <operation>equals</operation>
                <valueField>Additional_Service__c.Sales_Area__c</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Additional_Service__c</referenceTo>
        <relationshipLabel>CaseProducts (Additional Service2)</relationshipLabel>
        <relationshipName>Item_Product_Search_Results1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Additional_Service3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>VAT on Additional Services</inlineHelpText>
        <label>Additional Service 3</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <filterItems>
                <field>$User.Sales_Area1__c</field>
                <operation>equals</operation>
                <valueField>Additional_Service__c.Sales_Area__c</valueField>
            </filterItems>
            <filterItems>
                <field>$User.Sales_Area_2__c</field>
                <operation>equals</operation>
                <valueField>Additional_Service__c.Sales_Area__c</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Additional_Service__c</referenceTo>
        <relationshipLabel>CaseProducts (Additional Service3)</relationshipLabel>
        <relationshipName>CaseProducts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Additional_Service_Name1__c</fullName>
        <label>Additional Service Name1</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Additional_Service_Name2__c</fullName>
        <label>Additional Service Name2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Additional_Service_Name3__c</fullName>
        <label>Additional Service Name3</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Additional_Service_code1__c</fullName>
        <label>Additional Service code1</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Additional_Service_code2__c</fullName>
        <label>Additional Service code2</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Additional_Service_code3__c</fullName>
        <label>Additional Service code3</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Additional_service_1_VAT__c</fullName>
        <inlineHelpText>Tillægsydelser med moms</inlineHelpText>
        <label>VAT on Additional Service 1</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Additional_service_2_VAT__c</fullName>
        <inlineHelpText>Tillægsydelser med moms</inlineHelpText>
        <label>VAT on Additional Service 2</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Additional_service_3_VAT__c</fullName>
        <inlineHelpText>Tillægsydelser med moms</inlineHelpText>
        <label>VAT on Additional Service 3</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Alternate_Item_Id__c</fullName>
        <label>Alternate Item Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assortment_Name__c</fullName>
        <formula>Customer_Service_Product__r.Assortment__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Assortment Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Area__c</fullName>
        <formula>Customer_Service_Product__r.Business_Area_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Business Area</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>COD_Amount__c</fullName>
        <label>COD Amount</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Number_text__c</fullName>
        <description>Hidden system field for use in BI, capturing the Case Number of the related case record as plain text for exporting.</description>
        <formula>Case__r.CaseNumber</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Number (text)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipName>NTT_Search_Results</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Compensation_Amount__c</fullName>
        <label>Compensation Amount</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Customer_Claims__c</fullName>
        <label>Customer Claims</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Customer_Service_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Search for products or articles</inlineHelpText>
        <label>Products/Articles</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>(1 OR 2) AND (3 AND 4 AND 5)</booleanFilter>
            <filterItems>
                <field>$User.Sales_Area1__c</field>
                <operation>equals</operation>
                <valueField>Customer_Service_Product__c.Sales_Area__c</valueField>
            </filterItems>
            <filterItems>
                <field>$User.Sales_Area_2__c</field>
                <operation>equals</operation>
                <valueField>Customer_Service_Product__c.Sales_Area__c</valueField>
            </filterItems>
            <filterItems>
                <field>Customer_Service_Product__c.Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>Customer_Service_Product__c.Product_Type__c</field>
                <operation>contains</operation>
                <value>Article,Product Group,Product,Assortment</value>
            </filterItems>
            <filterItems>
                <field>Customer_Service_Product__c.Lifecycle__c</field>
                <operation>notContain</operation>
                <value>Deleted</value>
            </filterItems>
            <infoMessage>Help text</infoMessage>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Customer_Service_Product__c</referenceTo>
        <relationshipLabel>CaseProducts</relationshipLabel>
        <relationshipName>Item_Product_Search_Results</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DeliverPoint_address1__c</fullName>
        <label>Address1</label>
        <length>72</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DeliverPoint_address2__c</fullName>
        <label>Address2</label>
        <length>72</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DeliverPoint_city__c</fullName>
        <label>City</label>
        <length>72</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DeliverPoint_postalcode__c</fullName>
        <label>Postal Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DeliveryPoint_ContactMobile__c</fullName>
        <label>Mobile</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>DeliveryPoint_Contact__c</fullName>
        <label>Conctact Person</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DeliveryPoint_Contactemail__c</fullName>
        <label>email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>DeliveryPoint_Contactphone__c</fullName>
        <label>Telephone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>DeliveryPoint_Name__c</fullName>
        <label>Name</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Delivery_date__c</fullName>
        <label>Delivery date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Deliverypoint_country__c</fullName>
        <label>Country</label>
        <length>72</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Discount_Amount__c</fullName>
        <inlineHelpText>Kundens rabat</inlineHelpText>
        <label>Postage discount</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Distribution_Channel__c</fullName>
        <label>Distribution Channel</label>
        <picklist>
            <picklistValues>
                <fullName>10</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Division__c</fullName>
        <label>Division</label>
        <picklist>
            <picklistValues>
                <fullName>00</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Drop_off_date__c</fullName>
        <label>Drop off date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Estimated_Time_of_Arrival__c</fullName>
        <label>Estimated Time of Arrival</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Fault_Code1__c</fullName>
        <label>Fault Code1</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fault_Code2__c</fullName>
        <label>Fault Code2</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FreightPayerAddress1__c</fullName>
        <label>FreightPayerAddress1</label>
        <length>72</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FreightPayerAddress2__c</fullName>
        <label>FreightPayerAddress2</label>
        <length>72</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FreightPayerCity__c</fullName>
        <label>FreightPayerCity</label>
        <length>72</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FreightPayerCountry__c</fullName>
        <label>FreightPayerCountry</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FreightPayerName__c</fullName>
        <label>FreightPayerName</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FreightPayerPostalCode__c</fullName>
        <label>FreightPayerPostalCode</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GrossValue__c</fullName>
        <inlineHelpText>Porto med moms</inlineHelpText>
        <label>Postage with VAT</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Height_Unit__c</fullName>
        <label>Height Unit</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Height_Value__c</fullName>
        <label>Height Value</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Height__c</fullName>
        <label>Height</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Include_Prices__c</fullName>
        <inlineHelpText>Select the prices to be included in the total amount. All fields included here will be summed up as the total amount along with compensation amount</inlineHelpText>
        <label>Include Prices</label>
        <picklist>
            <picklistValues>
                <fullName>Postage before VAT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Postage with VAT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Postage discount</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customs/fuel surcharges before VAT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Total postage amount before VAT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VAT on total postage amount</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Total postage amount</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Price on Add. Service 1 before VAT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VAT on Additional Service 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Price on Add. Service 2 before VAT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VAT on Additional Service 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Price on Add. Service 3 before VAT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VAT on Additional Service 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Price on Add. Service 4 before VAT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VAT on Additional Service 4</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>IsPrimary__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Identifies if the Case Product Record is primary.</description>
        <label>IsPrimary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Item_Id__c</fullName>
        <label>Item Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Length_Unit__c</fullName>
        <label>Length Unit</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Length_Value__c</fullName>
        <label>Length Value</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Length__c</fullName>
        <label>Length</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NTT_Information2__c</fullName>
        <label>NTT Information</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>NTT_Information__c</fullName>
        <label>NTT Information</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Net_Value__c</fullName>
        <inlineHelpText>Porto uden moms</inlineHelpText>
        <label>Postage before VAT</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Notification_Phone_No__c</fullName>
        <label>Phone No.</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Notification_email__c</fullName>
        <label>email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>OpenTo2__c</fullName>
        <label>OpenTo2</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>OpenTo__c</fullName>
        <label>OpenTo</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Open_From2__c</fullName>
        <label>Open From2</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Open_From__c</fullName>
        <label>Open From</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Opening_Hours__c</fullName>
        <label>Opening Hours</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Pick_up_party_address1__c</fullName>
        <label>Pick up party address1</label>
        <length>72</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pick_up_party_address2__c</fullName>
        <label>Pick up party address2</label>
        <length>72</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pick_up_party_city__c</fullName>
        <label>Pick up party city</label>
        <length>72</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pick_up_party_country__c</fullName>
        <label>Pick up party country</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pick_up_party_postalcode__c</fullName>
        <label>Pick up party postalcode</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Portobel__c</fullName>
        <inlineHelpText>Porto ialt ( incl. tillægsydelser, gebyrer samt minus evt. rabat)</inlineHelpText>
        <label>Total postage amount</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Price_on_Add_Service_1_before_VAT__c</fullName>
        <inlineHelpText>Tillægsydelse uden moms</inlineHelpText>
        <label>Price on Add. Service 1 before VAT</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Price_on_Add_Service_2_before_VAT__c</fullName>
        <inlineHelpText>Tillægsydelse uden moms</inlineHelpText>
        <label>Price on Add. Service 2 before VAT</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Price_on_Add_Service_3_before_VAT__c</fullName>
        <inlineHelpText>Tillægsydelse uden moms</inlineHelpText>
        <label>Price on Add. Service 3 before VAT</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Product_Group__c</fullName>
        <formula>Customer_Service_Product__r.Product_Group__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Group</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_ID__c</fullName>
        <formula>Customer_Service_Product__r.Product_Article_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Net_Value__c</fullName>
        <label>Product Net Value</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Product_Type__c</fullName>
        <formula>Customer_Service_Product__r.Product_Type__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Receiver_Company_Name__c</fullName>
        <label>Receiver Name</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Receiver_Contact_Mobile__c</fullName>
        <label>Mobile</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Receiver_Contact_Name__c</fullName>
        <label>Contact person</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Receiver_Contact_Telephone__c</fullName>
        <label>Telephone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Receiver_Customer_Number__c</fullName>
        <label>Receiver Customer Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Receiver_Postal_Address_C_O__c</fullName>
        <label>C/O</label>
        <length>72</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Receiver_Postal_Address_City__c</fullName>
        <label>City</label>
        <length>72</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Receiver_Postal_Address_Country__c</fullName>
        <label>Country</label>
        <length>72</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Receiver_Postal_Address_Postal_Code__c</fullName>
        <label>Postal Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Receiver_Postal_Address_Street__c</fullName>
        <label>Street</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Receiver_contact_email__c</fullName>
        <label>email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Reference_Name1__c</fullName>
        <label>Reference Name1</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reference_Name2__c</fullName>
        <label>Reference Name2</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reference_Name3__c</fullName>
        <label>Reference Name3</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reference_Type1__c</fullName>
        <label>Reference Type1</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reference_Type2__c</fullName>
        <label>Reference Type2</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reference_Type3__c</fullName>
        <label>Reference Type3</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reference_Value1__c</fullName>
        <label>Reference Value1</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reference_Value2__c</fullName>
        <label>Reference Value2</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reference_Value3__c</fullName>
        <label>Reference Value3</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMS__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field will be true when the notification type is SMS</description>
        <label>SMS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Samtax_ID__c</fullName>
        <label>Samtax ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sender_Company_Name__c</fullName>
        <label>Sender Name</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sender_Contact_Mobile__c</fullName>
        <label>Mobile</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Sender_Contact_Name__c</fullName>
        <label>Contact person</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sender_Contact_Telephone__c</fullName>
        <label>Telephone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Sender_Contact_email__c</fullName>
        <label>email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Sender_Name__c</fullName>
        <label>Sender Name</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sender_Postal_Address_C_O__c</fullName>
        <label>C/O</label>
        <length>72</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sender_Postal_Address_City__c</fullName>
        <label>City</label>
        <length>72</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sender_Postal_Address_Country__c</fullName>
        <label>Country</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sender_Postal_Address_Postal_Code__c</fullName>
        <label>Postal Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sender_Postal_Address_Street__c</fullName>
        <label>Street</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Code__c</fullName>
        <label>Service Code</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Name__c</fullName>
        <label>Service Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Signature_Name__c</fullName>
        <label>Signature Name</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Solution__c</fullName>
        <label>Solution</label>
        <picklist>
            <picklistValues>
                <fullName>Non Compensation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Compensation</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_description__c</fullName>
        <label>Status description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Sum_of_Freight__c</fullName>
        <inlineHelpText>This price will be the sum of all prices included in the &quot;Include Prices&quot; field.</inlineHelpText>
        <label>Sum of Freight</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Surcharges__c</fullName>
        <inlineHelpText>Brændstofstillæg uden moms</inlineHelpText>
        <label>Customs/fuel surcharges before VAT</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Taxering__c</fullName>
        <label>Taxering</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Amount__c</fullName>
        <formula>Compensation_Amount__c  +  Sum_of_Freight__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Compensation amount + Sum of Freight</inlineHelpText>
        <label>Total Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_postage_amount_without_VAT__c</fullName>
        <inlineHelpText>Porto ialt uden moms (incl. tillægsydelser samt gebyr)</inlineHelpText>
        <label>Total postage amount before VAT</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Type_of_franking__c</fullName>
        <label>Type of Franking</label>
        <picklist>
            <picklistValues>
                <fullName>FLK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RPK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>I01</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>VAT_on_Sales_Price__c</fullName>
        <inlineHelpText>Porto ialt med moms (incl. moms på tillægsydelser og gebyrer)</inlineHelpText>
        <label>VAT on total postage amount</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <label>Value Amount</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Volume_Unit__c</fullName>
        <label>Volume Unit</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Volume_Value__c</fullName>
        <label>Volume Value</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Volume__c</fullName>
        <label>Volume</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Warning__c</fullName>
        <description>This formula field displays a warning message when isDirty field is set to true.</description>
        <formula>IF( isDirty__c ,IMAGE( &apos;/resource/warning&apos;, &apos;!&apos; ,12,12) + &apos; &apos; +  &apos;NTT search pending.&apos;,&apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Warning</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Weekday__c</fullName>
        <label>Weekday</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Weight_Unit__c</fullName>
        <label>Weight Unit</label>
        <picklist>
            <picklistValues>
                <fullName>kg</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>g</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Weight_Value__c</fullName>
        <label>Weight Value</label>
        <precision>7</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Weight__c</fullName>
        <label>Weight</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Width_Unit__c</fullName>
        <label>Width Unit</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Width_Value__c</fullName>
        <label>Width Value</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Width__c</fullName>
        <label>Width</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>externalCustomerNumber__c</fullName>
        <label>externalCustomerNumber</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isDirty__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field if set to true indicates that NTT Search is pending.</description>
        <label>isDirty</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>productionCustomerNumber__c</fullName>
        <label>productionCustomerNumber</label>
        <length>100</length>
        <type>Text</type>
    </fields>
</CustomObject>